# MF_API

./: .gitignore  README.md  pyproject.toml
example/: test.py
examples/: mosaique_example.py  radar_eccodes_example.py  test.py  test_decoder.py
src/mf_api/: __init__.py  client.py
src/mf_api/api/: arome.py  arome_pi.py  arpege.py  bulletin_avalanche.py  bulletin_vigilance.py  climatologie.py  meteo_forets.py  observation.py  paquet_arome.py  paquet_arome_om.py  paquet_arpege.py  paquet_observation.py  paquet_radar.py  paquet_vague_surcote.py  pe_arome.py  pe_arpege.py  piaf.py  radar.py  vague_surcote.py
src/mf_api/decoders/: eccodes_decoder.py  mosaique_decoder.py  table_converter.py
src/mf_api/decoders/eccodes_defs/bufr/tables/0/local/1/85/0/: element.table  sequence.def
src/mf_api/decoders/eccodes_defs/bufr/tables/0/local/10/85/0/: element.table
src/mf_api/decoders/eccodes_defs/bufr/tables/0/local/11/85/0/: element.table  sequence.def
src/mf_api/decoders/eccodes_defs/bufr/tables/0/local/12/85/0/: element.table  sequence.def
src/mf_api/decoders/eccodes_defs/bufr/tables/0/local/13/85/0/: element.table
src/mf_api/decoders/eccodes_defs/bufr/tables/0/local/14/85/0/: element.table
src/mf_api/decoders/eccodes_defs/bufr/tables/0/local/17/85/0/: element.table
src/mf_api/decoders/eccodes_defs/bufr/tables/0/local/18/85/0/: element.table
src/mf_api/decoders/eccodes_defs/bufr/tables/0/local/19/85/0/: element.table
src/mf_api/decoders/eccodes_defs/bufr/tables/0/local/2/85/0/: element.table  sequence.def
src/mf_api/utils/: __init__.py  parser.py
(+15 files in other folders)
