[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mf-api"
version = "0.1.1"
description = "A professional Python wrapper for Météo-France APIs (Radar, Paquet Radar, etc.)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "GalTechDev" }
]
dependencies = [
    "requests",
    "python-dotenv",
]

[project.optional-dependencies]
radar = [
    "eccodes",
    "unlzw3",
    "h5py",
    "numpy",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["src"]
